Remove HTML5Reset comments, update title, update social media metatags

--- a/index.html
+++ b/index.html
@@ -14,25 +14,18 @@
 	<!-- Always force latest IE rendering engine (even in intranet) -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-	<title>#StillWaiting: Health Care Death Clock</title>
+	<title>#StillWaiting: Medicaid Clock</title>
 	<meta name="author" content="Alliance for a Better Utah" />
 	<meta name="description" content="" />
 
 	<!-- Don't forget to set your site up: http://google.com/webmasters -->
 	<meta name="google-site-verification" content="" />
 
-	<!-- Who owns the content of this site? -->
 	<meta name="Copyright" content="Alliance for a Better Utah" />
 
-	<!--  Mobile Viewport
-	http://j.mp/mobileviewport & http://davidbcalhoun.com/2010/viewport-metatag
-	device-width : Occupy full width of the screen in its current orientation
-	initial-scale = 1.0 retains dimensions instead of zooming out if page height > device height
-	maximum-scale = 1.0 retains dimensions instead of zooming in if page width < device width (wrong for most sites)
-	-->
+	<!--  Mobile Viewport  -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Use Iconifyer to generate all the favicons and touch icons you need: http://iconifier.net -->
 	<link rel="shortcut icon" href="favicon.ico" />
 
 	<!-- concatenate and minify for production -->
@@ -52,32 +45,28 @@
 	<!-- Twitter: see https://dev.twitter.com/docs/cards/types/summary-card for details -->
 	<meta name="twitter:card" content="">
 	<meta name="twitter:site" content="betterutah.org">
-	<meta name="twitter:title" content="">
-	<meta name="twitter:description" content="">
+	<meta name="twitter:title" content="#StillWaiting: Medicaid Clock">
+	<meta name="twitter:description" content="The Utah Legislature has been unable to find a solution now for nearly 1200 days leaving thousands of Utahns #StillWaiting. This inaction has already cost hundreds of Utahns their lives. Let's stop the clock today!">
 	<meta name="twitter:url" content="http://betterutah.org/healthcare_deathclock/">
 	<!-- Facebook (and some others) use the Open Graph protocol: see http://ogp.me/ for details -->
-	<meta property="og:title" content="" />
-	<meta property="og:description" content="The Utah Legislature has been unable to find a solution now for 1184 days leaving thousands of Utahns #StillWaiting. This inaction has already cost 649 Utahns their lives. Let's stop the clock today!" />
-	<meta property="og:url" content="http://betterutah.org/healthcare_deathclock/" />
-	<meta property="og:image" content="http://betterutah.org/healthcare_deathclock/assets/images/abu-deathclock-fbshare.png" />
+	<meta property="og:title" content="#StillWaiting: Medicaid Clock" />
+	<meta property="og:description" content="The Utah Legislature has been unable to find a solution now for nearly 1200 days leaving thousands of Utahns #StillWaiting. This inaction has already cost hundreds of Utahns their lives. Let's stop the clock today!" />
+	<meta property="og:url" content="http://betterutah.org/medicaidclock/" />
+	<meta property="og:image" content="http://betterutah.org/medicaid/assets/images/abu-deathclock-fbshare.png" />
 
 </head>
 
 <body>
 
-<div ng-app="deathClock" class="flex-container wrapper" id="flex-div"><!-- not needed? up to you: http://camendesign.com/code/developpeurs_sans_frontieres -->
+<div ng-app="deathClock" class="flex-container wrapper" id="flex-div">
 
 	<header>
 		<a href="http://betterutah.org" target="_blank"><img src="assets/images/ABU-BW_Logo.png" alt="Alliance for a Better Utah" /></a>
 		<h1 class="tk-brandon-grotesque"><a href="http://betterutah.org/stillwaiting">#StillWaiting</a></h1>
-		<nav>
-			<!-- <a href="http://betterutah.org" target="_blank">Better Utah Home</a> -->
-			<!-- <a href="http://betterutah.org/stillwaiting" target="_blank">#StillWaiting Home</a> -->
-		</nav>
 	</header>
 
 	<div class="row clock">
-		<h2 class="tk-brandon-grotesque">Health Care Death Clock</h2>
+		<h2 class="tk-brandon-grotesque">Medicaid Clock</h2>
 
       	<div ng-controller="MyController" class="small-6 columns">
 
@@ -125,7 +114,7 @@
         	<div class="clockShares">
         		<div class="shareItem"><p>Share:</p></div>
         		<div class="shareItem"><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fbetterutah.org%2Fhealthcare_deathclock%2F" target="_blank"><i class="fa fa-facebook fa-2x"></i></a></div>
-        		<div class="shareItem "><a href="https://twitter.com/intent/tweet?text=The%20Legislature%27s%20inaction%20has%20already%20cost%20649%20Utahns%20their%20lives.%20Let%27s%20stop%20the%20clock%20today!&url=http%3A%2F%2Fbetterutah.org%2Fhealthcare_deathclock%2F&via=betterutah" target="_blank" class="js-social-share"><i class="fa fa-twitter fa-2x"></i></a></div>
+        		<div class="shareItem "><a href="https://twitter.com/intent/tweet?text=The%20Legislature%27s%20inaction%20has%20already%20cost%20hundreds%20of%20Utahns%20their%20lives.%20Let%27s%20stop%20the%20clock%20today!&url=http%3A%2F%2Fbetterutah.org%2Fhealthcare_deathclock%2F&via=betterutah" target="_blank" class="js-social-share"><i class="fa fa-twitter fa-2x"></i></a></div>
         	</div>
 
    	 	</div>
@@ -163,20 +152,16 @@
 <script src="assets/js/functions.js"></script>
 <script>$(document).ready(initPage);</script>
 
-<!-- Asynchronous google analytics; this is the official snippet.
-	 Replace UA-XXXXXX-XX with your site's ID and uncomment to enable.
-
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-XXXXXX-XX', 'auto');
+  ga('create', 'UA-31086524-1', 'auto');
   ga('send', 'pageview');
 
 </script>
--->
 
 </body>
 </html>
