Add Donut Hole Trailer and jQuery function for display

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 	</header>
 
 	<div class="row clock">
+		<button id="trailerButton" type="button">Watch the Donut Hole trailer</button>
+		<iframe src="https://player.vimeo.com/video/136622122?color=ffffff&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="trailer" id="trailer"></iframe>
+
 		<h2 class="brandongrotesk">Medicaid Clock</h2>
 
       	<div ng-controller="MyController" class="small-6 columns">
