--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
         		<div class="clockType" style="font-family:DigitalICG, sans-serif">seconds</div>
         	</div>
         	<div class="clockShares">
-        		<div class="shareItem"><p>Share:</p></div>
-        		<div class="shareItem"><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fbetterutah.org%2Fhealthcare_deathclock%2F" target="_blank"><i class="fa fa-facebook fa-2x"></i></a></div>
-        		<div class="shareItem "><a href="https://twitter.com/intent/tweet?text=The%20Legislature%27s%20inaction%20has%20already%20cost%20hundreds%20of%20Utahns%20their%20lives.%20Let%27s%20stop%20the%20clock%20today!&url=http%3A%2F%2Fbetterutah.org%2Fhealthcare_deathclock%2F&via=betterutah" target="_blank" class="js-social-share"><i class="fa fa-twitter fa-2x"></i></a></div>
+        		<div class="shareItem"><p>Share this on social media and call your legislators to action:</p></div>
+        		<div class="shareItem socialLink"><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fbetterutah.org%2Fhealthcare_deathclock%2F" target="_blank"><i class="fa fa-facebook fa-2x"></i></a></div>
+        		<div class="shareItem socialLink"><a href="https://twitter.com/intent/tweet?text=The%20Legislature%27s%20inaction%20has%20already%20cost%20hundreds%20of%20Utahns%20their%20lives.%20Let%27s%20stop%20the%20clock%20today!&url=http%3A%2F%2Fbetterutah.org%2Fhealthcare_deathclock%2F&via=betterutah" target="_blank" class="js-social-share"><i class="fa fa-twitter fa-2x"></i></a></div>
         	</div>
 
    	 	</div>
