--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 <div ng-app="deathClock" class="flex-container wrapper" id="flex-div">
 
 	<header>
-		<a href="http://betterutah.org" target="_blank"><img src="assets/images/ABU-BW_Logo.png" alt="Alliance for a Better Utah" /></a>
+		<a href="http://betterutah.org" target="_blank"><img src="assets/images/ABU-BW_Logo-02.svg" alt="Alliance for a Better Utah" /></a>
 		<h1 class="brandongrotesk"><a href="http://betterutah.org/stillwaiting">#StillWaiting</a></h1>
 	</header>
 
 	<div class="row clock">
-		<button id="trailerButton" type="button">Watch the Donut Hole trailer</button>
+		<button id="trailerButton" type="button" class="brandongrotesk">Watch the Donut Hole trailer &#128279;</button>
 		<iframe src="https://player.vimeo.com/video/136622122?color=ffffff&byline=0&portrait=0" width="400" height="225" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="trailer" id="trailer"></iframe>
 
 		<h2 class="brandongrotesk">Medicaid Clock</h2>
